syntax = "proto3";

package raft.v1;

option go_package = "raft/v1";

service Raft {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
  rpc Read(ReadRequest) returns (ReadResponse) {}
  rpc Write(WriteRequest) returns (WriteResponse) {}
}

message AppendEntriesRequest {
  int32 term = 1;
  string leader_id = 2;
  int64 prev_log_index = 3;
  int32 prev_log_term = 4;
  int64 leader_commit = 6;
  repeated LogEntry entries = 5;
}

message LogEntry {
  int32 term = 1;
  string command = 2;
  int64 index = 3;
}

message AppendEntriesResponse {
  int32 term = 1;
  bool success = 2;
}

message RequestVoteRequest {
  int32 term = 1;
  string candidate_id = 2;
  int64 last_log_index = 3;
  int64 last_log_term = 4;
}

message RequestVoteResponse {
  int32 term = 1;
  bool vote_granted = 2;
}

message ReadRequest {
  int32 key = 1;
}

message ReadResponse {
  string value = 1;
}

message WriteRequest {
  int32 key = 1;
  string value = 2;
}

message WriteResponse {
  bool success = 1;
}
